@@ -35,19 +35,7 @@
 	<build>
 	 
         <plugins>
-   
-		<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
-				<configuration>
-					<includes>
-						<include>**/TestAllPackages.java</include>
-					</includes>
-					<!--argLine>-Djava.security.manager -Djava.security.policy=${basedir}/src/test/resources/java.policy</argLine -->
-				</configuration>
-			</plugin>	
-		
+  
 			<plugin>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.1</version>
@@ -56,19 +44,7 @@
                 <executable>C:\Program Files\Java\jdk1.8.0_181\bin\javac.exe</executable>
             </configuration>
         </plugin>
-        <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
-				<configuration>
-					<showSuccess>true</showSuccess>
-				</configuration>
-			</plugin>
-			<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-report-plugin</artifactId>
-					<version>${maven-surefire-report-plugin.version}</version>
-				</plugin>
+ 
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
